--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,25 +19,14 @@ const allSkills = getAllSkillsInOneArray();
 ---
 
 <BaseLayout
-  Head={(
-    <>
-      <title>Francesco Alterio | Portfolio</title>
-      <meta
-        name="description"
-        content="All projects and skills of Francesco Alterio | Portfolio"
-      />
-      <meta property="og:title" content="Francesco Alterio | Portfolio" />
-      <meta
-        property="og:description"
-        content="All projects and skills of Francesco Alterio"
-      />
-      <meta property="og:url" content="https://francescoalterio.tech/" />
-      <meta
-        property="og:image"
-        content="https://francescoalterio.tech/presentation.png"
-      />
-    </>
-  )}
+  HeadData={{
+    title: "Francesco Alterio | Portfolio",
+    description: "All projects and skills of Francesco Alterio | Portfolio",
+    ogTitle: "Francesco Alterio | Portfolio",
+    ogDescription: "All projects and skills of Francesco Alterio",
+    ogURL: "https://francescoalterio.tech/",
+    ogImage: "https://francescoalterio.tech/presentation.png",
+  }}
 >
   <HomeNav />
   <header
