--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -37,22 +37,14 @@ const {
 ---
 
 <BaseLayout
-  Head={(
-    <>
-      <title>Francesco Alterio | {name} | Portfolio</title>
-      <meta name="description" content={description.slice(0, 10) + "..."} />
-      <meta
-        property="og:title"
-        content={`Francesco Alterio | ${name} | Portfolio`}
-      />
-      <meta
-        property="og:description"
-        content={description.slice(0, 10) + "..."}
-      />
-      <meta property="og:url" content="https://francescoalterio.tech/" />
-      <meta property="og:image" content={`/assets/projects/${fileName}`} />
-    </>
-  )}
+  HeadData={{
+    title: `Francesco Alterio | ${name} | Portfolio`,
+    description: description.slice(0, 10) + "...",
+    ogTitle: `Francesco Alterio | ${name} | Portfolio`,
+    ogDescription: description.slice(0, 10) + "...",
+    ogURL: "https://francescoalterio.tech/",
+    ogImage: `/assets/projects/${fileName}`,
+  }}
 >
   <NavLayout>
     <LogoName />
