presentation image to webp

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const allSkills = getAllSkillsInOneArray();
       <div class="flex gap-2"></div>
     </div>
     <img
-      src="/assets/presentation.png"
+      src="/assets/presentation.webp"
       alt=""
       class="lg:w-[25rem] xl:w-[32rem] 2xl:w-[38rem]"
       loading="eager"
