--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -27,6 +27,7 @@ const { title, description, ogTitle, ogDescription, ogURL, ogImage } = HeadData;
       property="og:image"
       content="https://francescoalterio.tech/presentation.png"
     />
+    <link rel="icon" href="/images/favicon.ico" />
   </head>
   <body class="text-white bg-customGray-200 min-h-[1080px]">
     <slot />
