use max-width for responsive

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -35,7 +35,7 @@ const shortDescription = description.split(" ").slice(0, 25).join(" ");
 ---
 
 <div
-  class={`flex relative min-w-full md:min-w-[290px] lg:min-w-[300px] xl:min-w-[300px] 2xl:min-w-[370px] 3xl:min-w-[500px] flex-1 justify-between flex-col `}
+  class={`flex relative min-w-full md:min-w-[290px] lg:min-w-[300px] xl:min-w-[300px]  flex-1 justify-between flex-col `}
 >
   <div class="rounded-md">
     <Picture
