--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -11,8 +11,10 @@ const { background, className, id } = Astro.props;
 <section
   class={`${
     background === "light" ? "bg-customGray-200" : "bg-customGray-300"
-  } px-6 sm:px-12 md:px-16 lg:px-28 xl:px-32 2xl:px-40 ${className}`}
+  } `}
   id={id}
 >
-  <slot />
+  <div class=`px-6 sm:px-12 md:px-16 max-w-screen-xl mx-auto ${className}`>
+    <slot />
+  </div>
 </section>
