--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,63 +2,67 @@
 import { Icon } from "astro-icon";
 ---
 
-<footer
-  class="relative bg-customGray-200 px-6 sm:px-12 md:px-16 lg:px-28 xl:px-32 2xl:px-40 flex pt-28 pb-36 gap-20 flex-col items-center lg:items-start lg:flex-row justify-center"
->
-  <div class="flex-1 flex flex-col text-center lg:text-left">
-    <p class="text-2xl font-semibold">
-      Would you like to contact me for a project?
-    </p>
-    <p class="text-sm text-gray-400 mt-4">You can write to my personal email</p>
-    <a
-      class="text-primaryLight text-lg font-semibold underline decoration-2 mt-10"
-      id="email-a"
-      href="https://mail.google.com/mail/?view=cm&fs=1&to=francescoalteriog@gmail.com"
-      target="_blank"
-    >
-      francescoalteriog@gmail.com <Icon
-        name="ic:outline-keyboard-arrow-right"
-        class="w-7 inline-block text-primaryLight"
-      />
-    </a>
-  </div>
-  <div class="flex-1 text-center lg:text-left">
-    <h4 class="text-xl font-semibold">Other social networks</h4>
-    <ul class="flex gap-3 mt-5">
-      <li
-        class="p-3 bg-customGray-300 rounded-full transition-all hover:transform hover:scale-105 cursor-pointer"
+<footer class="bg-customGray-200">
+  <div
+    class="relative px-6 sm:px-12 md:px-16 max-w-screen-xl mx-auto flex pt-28 pb-36 gap-20 flex-col items-center lg:items-start lg:flex-row justify-center"
+  >
+    <div class="flex-1 flex flex-col text-center lg:text-left">
+      <p class="text-2xl font-semibold">
+        Would you like to contact me for a project?
+      </p>
+      <p class="text-sm text-gray-400 mt-4">
+        You can write to my personal email
+      </p>
+      <a
+        class="text-primaryLight text-lg font-semibold underline decoration-2 mt-10"
+        id="email-a"
+        href="https://mail.google.com/mail/?view=cm&fs=1&to=francescoalteriog@gmail.com"
+        target="_blank"
       >
-        <a href="https://www.linkedin.com/in/francescoalterio/"
-          ><Icon name="mdi:linkedin" class="w-7 inline-block text-white" /></a
+        francescoalteriog@gmail.com <Icon
+          name="ic:outline-keyboard-arrow-right"
+          class="w-7 inline-block text-primaryLight"
+        />
+      </a>
+    </div>
+    <div class="flex-1 text-center lg:text-left">
+      <h4 class="text-xl font-semibold">Other social networks</h4>
+      <ul class="flex gap-3 mt-5">
+        <li
+          class="p-3 bg-customGray-300 rounded-full transition-all hover:transform hover:scale-105 cursor-pointer"
         >
-      </li>
-      <li
-        class="p-3 bg-customGray-300 rounded-full transition-all hover:transform hover:scale-105 cursor-pointer"
-      >
-        <a href="https://github.com/francescoalterio">
-          <Icon name="mdi:github" class="w-7 inline-block text-white" /></a
+          <a href="https://www.linkedin.com/in/francescoalterio/"
+            ><Icon name="mdi:linkedin" class="w-7 inline-block text-white" /></a
+          >
+        </li>
+        <li
+          class="p-3 bg-customGray-300 rounded-full transition-all hover:transform hover:scale-105 cursor-pointer"
         >
-      </li>
-      <li
-        class="p-3 bg-customGray-300 rounded-full transition-all hover:transform hover:scale-105 cursor-pointer"
-      >
-        <a href="https://twitter.com/francescoaltg"
-          ><Icon name="mdi:twitter" class="w-7 inline-block text-white" /></a
+          <a href="https://github.com/francescoalterio">
+            <Icon name="mdi:github" class="w-7 inline-block text-white" /></a
+          >
+        </li>
+        <li
+          class="p-3 bg-customGray-300 rounded-full transition-all hover:transform hover:scale-105 cursor-pointer"
         >
-      </li>
-      <li
-        class="p-3 bg-customGray-300 rounded-full transition-all hover:transform hover:scale-105 cursor-pointer"
-      >
-        <a href="https://www.youtube.com/@francescox5989/videos"
-          ><Icon name="mdi:youtube" class="w-7 inline-block text-white" /></a
+          <a href="https://twitter.com/francescoaltg"
+            ><Icon name="mdi:twitter" class="w-7 inline-block text-white" /></a
+          >
+        </li>
+        <li
+          class="p-3 bg-customGray-300 rounded-full transition-all hover:transform hover:scale-105 cursor-pointer"
         >
-      </li>
-    </ul>
-  </div>
-  <div class="absolute bottom-12">
-    <p>
-      <span class="font-semibold text-primaryLight">Thanks for reading.</span> Have
-      a nice day
-    </p>
+          <a href="https://www.youtube.com/@francescox5989/videos"
+            ><Icon name="mdi:youtube" class="w-7 inline-block text-white" /></a
+          >
+        </li>
+      </ul>
+    </div>
+    <div class="absolute bottom-12">
+      <p>
+        <span class="font-semibold text-primaryLight">Thanks for reading.</span>
+        Have a nice day
+      </p>
+    </div>
   </div>
 </footer>
