--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ const allSkills = getAllSkillsInOneArray();
           </RolPill>
         </div>
         <h1
-          class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl 2xl:text-7xl font-bold"
+          class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl font-bold"
         >
           Hi, my name is Francesco Alterio
         </h1>
