--- a/src/pages/projects/[language].astro
+++ b/src/pages/projects/[language].astro
@@ -21,8 +21,6 @@ const names = {
 
 import ProjectList from "../../components/ProjectList.astro";
 import Section from "../../components/Section.astro";
-import { Icon } from "astro-icon";
-import ProjectFilterAnchor from "../../components/ProjectFilterAnchor.astro";
 import NavLayout from "../../layouts/NavLayout.astro";
 import LogoName from "../../components/LogoName.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
@@ -60,7 +58,7 @@ const language = Astro.params.language;
     </div>
   </NavLayout>
   <header
-    class="bg-customGray-200 flex flex-col px-6 sm:px-12 md:px-16 lg:px-28 xl:px-32 2xl:px-40 gap-16 sm:pb-6 md:pb-10 pt-10 md:pt-20"
+    class="bg-customGray-200 flex flex-col px-6 sm:px-12 md:px-16 max-w-screen-xl mx-auto gap-16 sm:pb-6 md:pb-10 pt-10 md:pt-20"
   >
     <h1 class="text-white text-2xl sm:text-3xl md:text-4xl">
       {names[language]} Projects
