--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -37,4 +37,12 @@ const filteredProjects =
       );
     })
   }
+  <div
+    class="flex relative min-w-full md:min-w-[290px] lg:min-w-[300px] xl:min-w-[300px] flex-1 justify-between flex-col"
+  >
+  </div>
+  <div
+    class="flex relative min-w-full md:min-w-[290px] lg:min-w-[300px] xl:min-w-[300px] flex-1 justify-between flex-col"
+  >
+  </div>
 </div>
