--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -28,7 +28,7 @@ const { title, description, ogTitle, ogDescription, ogURL, ogImage } = HeadData;
     />
     <link rel="icon" href="/assets/favicon-yo.ico" />
   </head>
-  <body class="text-white bg-customGray-200 min-h-[1080px]">
+  <body class="text-white bg-customGray-200 min-h-screen">
     <slot />
   </body>
 </html>
