--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -60,7 +60,7 @@ const {
         aspectRatio="16:9"
         sizes="1920px"
         alt={alt}
-        class="lg:sticky lg:top-[112px]"
+        class="lg:sticky lg:top-6"
       />
     </div>
 
