add courses section

--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -1,6 +1,6 @@
 ---
 import projects from "../../db/projects.json";
-import { projectFilter } from "../types";
+import { type projectFilter } from "../types";
 import ProjectCard from "./ProjectCard.astro";
 
 interface Props {
