--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -189,7 +189,7 @@ const allSkills = getAllSkillsInOneArray();
     </Section>
     <Section
       background="light"
-      className="flex flex-col items-center gap-10 py-10"
+      className="flex flex-col items-center gap-10 pt-10"
     >
       <h2 class="text-2xl sm:text-3xl md:text-4xl my-5">
         Official Online Courses
