remove bg white in courses circles

--- a/src/components/CourseList.astro
+++ b/src/components/CourseList.astro
@@ -78,7 +78,7 @@ import { Icon } from "astro-icon";
         card.classList.add("bg-white");
         card.classList.remove("bg-slate-500");
       } else {
-        card.classList.add("bg-white");
+        card.classList.add("bg-slate-500");
       }
     });
   };
