remove bg white in course circles

--- a/src/components/CourseList.astro
+++ b/src/components/CourseList.astro
@@ -79,6 +79,7 @@ import { Icon } from "astro-icon";
         card.classList.remove("bg-slate-500");
       } else {
         card.classList.add("bg-slate-500");
+        card.classList.remove("bg-white");
       }
     });
   };
