add more margin in courses title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ const allSkills = getAllSkillsInOneArray();
         <div class="flex">
           <RolPill>
             <Icon name="mdi:xml" class="w-4" />
-             Frontend Developer
+            Frontend Developer
           </RolPill>
         </div>
         <h1
@@ -187,11 +187,8 @@ const allSkills = getAllSkillsInOneArray();
         }
       </div>
     </Section>
-    <Section
-      background="light"
-      className="flex flex-col items-center gap-10 pt-10"
-    >
-      <h2 class="text-2xl sm:text-3xl md:text-4xl my-5">
+    <Section background="light" className=" flex flex-col items-center py-10">
+      <h2 class="text-2xl sm:text-3xl md:text-4xl mt-5 mb-16">
         Official Online Courses
       </h2>
       <CourseList />
