--- a/src/components/CourseCard.astro
+++ b/src/components/CourseCard.astro
@@ -20,7 +20,7 @@ const alt = logo.split(".")[0];
     <img src={imgPath} alt={alt} class="w-12 h-12 object-contain" />
     <div class="flex flex-col gap-2">
       <h6 class="text-xs md:text-sm">{platform}</h6>
-      <h4 class="text-sm md:text-base font-bold line-clamp-2 line">{title}</h4>
+      <h4 class="text-sm md:text-base font-bold line-clamp-2">{title}</h4>
     </div>
   </div>
 
