Add spanish traduccion

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,10 +8,10 @@ import { Icon } from "astro-icon";
   >
     <div class="flex-1 flex flex-col text-center lg:text-left">
       <p class="text-2xl font-semibold">
-        Would you like to contact me for a project?
+        ¿Quieres contactarme para un proyecto?
       </p>
       <p class="text-sm text-gray-400 mt-4">
-        You can write to my personal email
+        Puedes escribir a mi correo personal
       </p>
       <a
         class="text-primaryLight text-lg font-semibold underline decoration-2 mt-10"
@@ -26,7 +26,7 @@ import { Icon } from "astro-icon";
       </a>
     </div>
     <div class="flex-1 text-center lg:text-left">
-      <h4 class="text-xl font-semibold">Other social networks</h4>
+      <h4 class="text-xl font-semibold">Otras redes sociales</h4>
       <ul class="flex gap-3 mt-5">
         <li
           class="p-3 bg-customGray-300 rounded-full transition-all hover:transform hover:scale-105 cursor-pointer"
@@ -60,8 +60,8 @@ import { Icon } from "astro-icon";
     </div>
     <div class="absolute bottom-12">
       <p>
-        <span class="font-semibold text-primaryLight">Thanks for reading.</span>
-        Have a nice day
+        <span class="font-semibold text-primaryLight">Gracias por leer.</span>
+        Que tenga un lindo día
       </p>
     </div>
   </div>
