--- a/src/components/HomeNav.astro
+++ b/src/components/HomeNav.astro
@@ -9,9 +9,9 @@ import EmailButton from "./EmailButton.astro";
 <NavLayout>
   <LogoName />
   <div class="hidden lg:flex justify-center items-center gap-10">
-    <NavAnchor href="#about">About</NavAnchor>
-    <NavAnchor href="#projects">Projects</NavAnchor>
-    <NavAnchor href="#skills">Skills</NavAnchor>
+    <NavAnchor href="#about">Sobre mí</NavAnchor>
+    <NavAnchor href="#projects">Proyectos</NavAnchor>
+    <NavAnchor href="#skills">Habilidades</NavAnchor>
   </div>
   <div
     class="flex justify-center items-center gap-4 md:gap-6 lg:gap-8 xl:gap-10"
