--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -77,6 +77,6 @@ const shortDescription = description.split(" ").slice(0, 25).join(" ");
         )
       }
     </div>
-    <BorderedAnchor href={`/projects/${id}`} isFull>Learn More</BorderedAnchor>
+    <BorderedAnchor href={`/projects/${id}`} isFull>Leer Más</BorderedAnchor>
   </div>
 </div>
