--- a/src/components/CourseCard.astro
+++ b/src/components/CourseCard.astro
@@ -26,7 +26,7 @@ const alt = logo.split(".")[0];
 
   <div class="flex flex-col gap-4 items-center">
     <BorderedAnchor href={certificationUrl} isFull size="small" blank
-      >Certification</BorderedAnchor
+      >Certificación</BorderedAnchor
     >
   </div>
 </article>
