--- a/src/pages/projects/[language].astro
+++ b/src/pages/projects/[language].astro
@@ -39,14 +39,14 @@ const language = Astro.params.language;
     <div
       class="flex justify-center items-center gap-2 sm:gap-4 md:gap-6 lg:gap-10"
     >
-      <NavAnchor href="/projects/all">All</NavAnchor>
+      <NavAnchor href="/projects/all">Todos</NavAnchor>
       <NavAnchor href="/projects/javascript">
-         <span class="hidden md:inline">Javascript</span><span class="md:hidden"
+        <span class="hidden md:inline">Javascript</span><span class="md:hidden"
           >JS</span
         >
       </NavAnchor>
       <NavAnchor href="/projects/typescript">
-         <span class="hidden md:inline">Typescript</span><span class="md:hidden"
+        <span class="hidden md:inline">Typescript</span><span class="md:hidden"
           >TS</span
         >
       </NavAnchor>
